Add API specs for users endpoint

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -26,6 +26,12 @@ Metrics/ClassLength:
 Layout/LineLength:
   Max: 128
 
+RSpec/ContextWording:
+  Enabled: false
+
+RSpec/MultipleExpectations:
+  Enabled: false
+
 Style/Documentation:
   Enabled: false
 
