Add PATCH blocks/:id/children endpoint

--- a/spec/fixtures/notion/block_children.yml
+++ b/spec/fixtures/notion/block_children.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.notion.com/v1/databases/89b30a70-ce51-4646-ab4f-5fdcb1d5e76c
+    uri: https://api.notion.com/v1/blocks/723578f1-6e51-450c-8ee1-09158c19fd4c/children?id=723578f1-6e51-450c-8ee1-09158c19fd4c
     body:
       encoding: US-ASCII
       string: ''
@@ -21,7 +21,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Sun, 25 Apr 2021 20:59:57 GMT
+      - Sun, 25 Apr 2021 21:05:45 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -29,10 +29,10 @@ http_interactions:
       Connection:
       - keep-alive
       Set-Cookie:
-      - __cfduid=d5a4f07dd38f580697bebcaaca2da3f9a1619384396; expires=Tue, 25-May-21
-        20:59:56 GMT; path=/; domain=.notion.com; HttpOnly; SameSite=Lax
-      - notion_browser_id=45f818ef-a9e0-48c3-8a6d-27b348c0dd7f; Domain=www.notion.so;
-        Path=/; Expires=Wed, 01 Jan 2053 22:46:37 GMT; Secure
+      - __cfduid=d96e3d721ac572f706ca68070606fa2391619384744; expires=Tue, 25-May-21
+        21:05:44 GMT; path=/; domain=.notion.com; HttpOnly; SameSite=Lax
+      - notion_browser_id=612a2641-5d00-4c18-85b2-269d399f4e4b; Domain=www.notion.so;
+        Path=/; Expires=Wed, 01 Jan 2053 22:52:25 GMT; Secure
       X-Dns-Prefetch-Control:
       - 'off'
       X-Frame-Options:
@@ -111,23 +111,27 @@ http_interactions:
         https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
         media-src https: http:'
       Etag:
-      - W/"20f-NDWBFPc2tGeeFrAke368a5IhMtE"
+      - W/"621-oTt6TNWfBPJwQLysHa2sgVrXxyc"
       Vary:
       - Accept-Encoding
       Cf-Cache-Status:
       - DYNAMIC
       Cf-Request-Id:
-      - '09ac6e02b50000a855f6ba9000000001'
+      - '09ac7352730000edf3513be000000001'
       Expect-Ct:
       - max-age=604800, report-uri="https://report-uri.cloudflare.com/cdn-cgi/beacon/expect-ct"
       Server:
       - cloudflare
       Cf-Ray:
-      - 645a7f7dea82a855-CDG
+      - 645a87fd8f1aedf3-CDG
     body:
       encoding: UTF-8
-      string: '{"object":"database","id":"89b30a70-ce51-4646-ab4f-5fdcb1d5e76c","created_time":"2021-01-29T20:50:51.917Z","last_edited_time":"2021-04-25T19:59:00.000Z","title":[{"type":"text","text":{"content":"A
-        Notion database","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"A
-        Notion database","href":null}],"properties":{"Tags":{"id":"yu]\\","type":"multi_select","multi_select":{"options":[]}},"Name":{"id":"title","type":"title","title":{}}}}'
-  recorded_at: Sun, 25 Apr 2021 20:59:57 GMT
+      string: '{"object":"list","results":[{"object":"block","id":"786f3663-78aa-4852-afe7-0ef7da78dedc","created_time":"2021-04-25T20:40:00.000Z","last_edited_time":"2021-04-25T20:40:00.000Z","has_children":false,"type":"heading_1","heading_1":{"text":[{"type":"text","text":{"content":"A
+        Header","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"A
+        Header","href":null}]}},{"object":"block","id":"e450fda8-0159-405f-ab67-f9de28bb4e49","created_time":"2021-04-25T20:41:00.000Z","last_edited_time":"2021-04-25T20:41:00.000Z","has_children":false,"type":"paragraph","paragraph":{"text":[{"type":"text","text":{"content":"A
+        paragraph","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"A
+        paragraph","href":null}]}},{"object":"block","id":"9051af10-83cb-4688-9210-3dae39432680","created_time":"2021-04-25T20:41:00.000Z","last_edited_time":"2021-04-25T20:41:00.000Z","has_children":false,"type":"paragraph","paragraph":{"text":[]}},{"object":"block","id":"f512bf64-55b0-432e-a850-82e73637d895","created_time":"2021-04-25T21:04:29.565Z","last_edited_time":"2021-04-25T21:04:29.565Z","has_children":false,"type":"heading_2","heading_2":{"text":[{"type":"text","text":{"content":"Another
+        Heading","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"Another
+        Heading","href":null}]}}],"next_cursor":null,"has_more":false}'
+  recorded_at: Sun, 25 Apr 2021 21:05:45 GMT
 recorded_with: VCR 6.0.0
