--- a/spec/fixtures/notion/block_append_children.yml
+++ b/spec/fixtures/notion/block_append_children.yml
@@ -1,11 +1,12 @@
 ---
 http_interactions:
 - request:
-    method: get
-    uri: https://api.notion.com/v1/databases/89b30a70-ce51-4646-ab4f-5fdcb1d5e76c
+    method: patch
+    uri: https://api.notion.com/v1/blocks/723578f1-6e51-450c-8ee1-09158c19fd4c/children
     body:
-      encoding: US-ASCII
-      string: ''
+      encoding: UTF-8
+      string: '{"id":"723578f1-6e51-450c-8ee1-09158c19fd4c","children":[{"object":"block","type":"heading_2","heading_2":{"text":[{"type":"text","text":{"content":"Another
+        Heading"}}]}}]}'
     headers:
       Accept:
       - application/json; charset=utf-8
@@ -13,6 +14,8 @@ http_interactions:
       - Notion Ruby Client/0.0.4
       Authorization:
       - Bearer <NOTION_API_TOKEN>
+      Content-Type:
+      - application/json
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
   response:
@@ -21,7 +24,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Sun, 25 Apr 2021 20:59:57 GMT
+      - Sun, 25 Apr 2021 21:05:49 GMT
       Content-Type:
       - application/json; charset=utf-8
       Transfer-Encoding:
@@ -29,10 +32,10 @@ http_interactions:
       Connection:
       - keep-alive
       Set-Cookie:
-      - __cfduid=d5a4f07dd38f580697bebcaaca2da3f9a1619384396; expires=Tue, 25-May-21
-        20:59:56 GMT; path=/; domain=.notion.com; HttpOnly; SameSite=Lax
-      - notion_browser_id=45f818ef-a9e0-48c3-8a6d-27b348c0dd7f; Domain=www.notion.so;
-        Path=/; Expires=Wed, 01 Jan 2053 22:46:37 GMT; Secure
+      - __cfduid=d34e3fa5c4766df6ac5561da522624b761619384749; expires=Tue, 25-May-21
+        21:05:49 GMT; path=/; domain=.notion.com; HttpOnly; SameSite=Lax
+      - notion_browser_id=e006545d-4f97-4497-8d9c-491386cb6d2a; Domain=www.notion.so;
+        Path=/; Expires=Wed, 01 Jan 2053 22:52:29 GMT; Secure
       X-Dns-Prefetch-Control:
       - 'off'
       X-Frame-Options:
@@ -111,23 +114,22 @@ http_interactions:
         https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
         media-src https: http:'
       Etag:
-      - W/"20f-NDWBFPc2tGeeFrAke368a5IhMtE"
+      - W/"e5-DFeqv/gYemlg3XfmjAU4nnWmtn8"
       Vary:
       - Accept-Encoding
       Cf-Cache-Status:
       - DYNAMIC
       Cf-Request-Id:
-      - '09ac6e02b50000a855f6ba9000000001'
+      - '09ac73642e00000818408a7000000001'
       Expect-Ct:
       - max-age=604800, report-uri="https://report-uri.cloudflare.com/cdn-cgi/beacon/expect-ct"
       Server:
       - cloudflare
       Cf-Ray:
-      - 645a7f7dea82a855-CDG
+      - 645a8819e9030818-CDG
     body:
       encoding: UTF-8
-      string: '{"object":"database","id":"89b30a70-ce51-4646-ab4f-5fdcb1d5e76c","created_time":"2021-01-29T20:50:51.917Z","last_edited_time":"2021-04-25T19:59:00.000Z","title":[{"type":"text","text":{"content":"A
-        Notion database","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"A
-        Notion database","href":null}],"properties":{"Tags":{"id":"yu]\\","type":"multi_select","multi_select":{"options":[]}},"Name":{"id":"title","type":"title","title":{}}}}'
-  recorded_at: Sun, 25 Apr 2021 20:59:57 GMT
+      string: '{"object":"block","id":"723578f1-6e51-450c-8ee1-09158c19fd4c","created_time":"2021-01-29T20:50:51.917Z","last_edited_time":"2021-04-25T21:05:49.706Z","has_children":true,"type":"child_page","child_page":{"title":"A
+        Notion page"}}'
+  recorded_at: Sun, 25 Apr 2021 21:05:49 GMT
 recorded_with: VCR 6.0.0
