Fix Rubocop issues

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -35,6 +35,15 @@ RSpec/ExampleLength:
 RSpec/MultipleExpectations:
   Enabled: false
 
+RSpec/FilePath:
+  Enabled: false
+
+RSpec/MessageSpies:
+  Enabled: false
+
+RSpec/NestedGroups:
+  Max: 5
+
 Style/Documentation:
   Enabled: false
 
@@ -44,6 +53,3 @@ Style/ModuleFunction:
 Naming/FileName:
   Exclude:
     - lib/notion-ruby-client.rb # Required to match gemspec name
-
-RSpec/FilePath:
-  Enabled: false
