--- a/spec/fixtures/notion/block_children.yml
+++ b/spec/fixtures/notion/block_children.yml
@@ -1,137 +1,138 @@
 ---
 http_interactions:
-- request:
-    method: get
-    uri: https://api.notion.com/v1/blocks/723578f1-6e51-450c-8ee1-09158c19fd4c/children?id=723578f1-6e51-450c-8ee1-09158c19fd4c
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept:
-      - application/json; charset=utf-8
-      User-Agent:
-      - Notion Ruby Client/0.0.4
-      Authorization:
-      - Bearer <NOTION_API_TOKEN>
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Date:
-      - Sun, 25 Apr 2021 21:05:45 GMT
-      Content-Type:
-      - application/json; charset=utf-8
-      Transfer-Encoding:
-      - chunked
-      Connection:
-      - keep-alive
-      Set-Cookie:
-      - __cfduid=d96e3d721ac572f706ca68070606fa2391619384744; expires=Tue, 25-May-21
-        21:05:44 GMT; path=/; domain=.notion.com; HttpOnly; SameSite=Lax
-      - notion_browser_id=612a2641-5d00-4c18-85b2-269d399f4e4b; Domain=www.notion.so;
-        Path=/; Expires=Wed, 01 Jan 2053 22:52:25 GMT; Secure
-      X-Dns-Prefetch-Control:
-      - 'off'
-      X-Frame-Options:
-      - SAMEORIGIN
-      Strict-Transport-Security:
-      - max-age=5184000; includeSubDomains
-      X-Download-Options:
-      - noopen
-      X-Content-Type-Options:
-      - nosniff
-      X-Xss-Protection:
-      - 1; mode=block
-      Referrer-Policy:
-      - same-origin
-      Content-Security-Policy:
-      - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
-        https://apis.google.com https://api.amplitude.com https://widget.intercom.io
-        https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
-        https://analytics.pgncs.notion.so https://checkout.stripe.com https://js.stripe.com/v3
-        https://embed.typeform.com https://admin.typeform.com https://platform.twitter.com
-        https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
-        connect-src ''self'' https://msgstore.www.notion.so wss://msgstore.www.notion.so
-        ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
-        https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
-        https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
-        https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-        https://api.segment.io https://api.pgncs.notion.so https://checkout.stripe.com
-        https://js.stripe.com/v3 https://cdn.contentful.com https://preview.contentful.com
-        https://images.ctfassets.net https://api.unsplash.com https://boards-api.greenhouse.io;
-        font-src ''self'' data: https://cdnjs.cloudflare.com https://js.intercomcdn.com;
-        img-src ''self'' data: blob: https: https://platform.twitter.com https://syndication.twitter.com
-        https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
-        ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com https://github.githubassets.com
-        https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
-        media-src https: http:'
-      X-Content-Security-Policy:
-      - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
-        https://apis.google.com https://api.amplitude.com https://widget.intercom.io
-        https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
-        https://analytics.pgncs.notion.so https://checkout.stripe.com https://js.stripe.com/v3
-        https://embed.typeform.com https://admin.typeform.com https://platform.twitter.com
-        https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
-        connect-src ''self'' https://msgstore.www.notion.so wss://msgstore.www.notion.so
-        ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
-        https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
-        https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
-        https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-        https://api.segment.io https://api.pgncs.notion.so https://checkout.stripe.com
-        https://js.stripe.com/v3 https://cdn.contentful.com https://preview.contentful.com
-        https://images.ctfassets.net https://api.unsplash.com https://boards-api.greenhouse.io;
-        font-src ''self'' data: https://cdnjs.cloudflare.com https://js.intercomcdn.com;
-        img-src ''self'' data: blob: https: https://platform.twitter.com https://syndication.twitter.com
-        https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
-        ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com https://github.githubassets.com
-        https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
-        media-src https: http:'
-      X-Webkit-Csp:
-      - 'script-src ''self'' ''unsafe-inline'' ''unsafe-eval'' https://gist.github.com
-        https://apis.google.com https://api.amplitude.com https://widget.intercom.io
-        https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
-        https://analytics.pgncs.notion.so https://checkout.stripe.com https://js.stripe.com/v3
-        https://embed.typeform.com https://admin.typeform.com https://platform.twitter.com
-        https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
-        connect-src ''self'' https://msgstore.www.notion.so wss://msgstore.www.notion.so
-        ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
-        https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
-        https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
-        https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
-        https://api.segment.io https://api.pgncs.notion.so https://checkout.stripe.com
-        https://js.stripe.com/v3 https://cdn.contentful.com https://preview.contentful.com
-        https://images.ctfassets.net https://api.unsplash.com https://boards-api.greenhouse.io;
-        font-src ''self'' data: https://cdnjs.cloudflare.com https://js.intercomcdn.com;
-        img-src ''self'' data: blob: https: https://platform.twitter.com https://syndication.twitter.com
-        https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
-        ''self'' ''unsafe-inline'' https://cdnjs.cloudflare.com https://github.githubassets.com
-        https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
-        media-src https: http:'
-      Etag:
-      - W/"621-oTt6TNWfBPJwQLysHa2sgVrXxyc"
-      Vary:
-      - Accept-Encoding
-      Cf-Cache-Status:
-      - DYNAMIC
-      Cf-Request-Id:
-      - '09ac7352730000edf3513be000000001'
-      Expect-Ct:
-      - max-age=604800, report-uri="https://report-uri.cloudflare.com/cdn-cgi/beacon/expect-ct"
-      Server:
-      - cloudflare
-      Cf-Ray:
-      - 645a87fd8f1aedf3-CDG
-    body:
-      encoding: UTF-8
-      string: '{"object":"list","results":[{"object":"block","id":"786f3663-78aa-4852-afe7-0ef7da78dedc","created_time":"2021-04-25T20:40:00.000Z","last_edited_time":"2021-04-25T20:40:00.000Z","has_children":false,"type":"heading_1","heading_1":{"text":[{"type":"text","text":{"content":"A
-        Header","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"A
-        Header","href":null}]}},{"object":"block","id":"e450fda8-0159-405f-ab67-f9de28bb4e49","created_time":"2021-04-25T20:41:00.000Z","last_edited_time":"2021-04-25T20:41:00.000Z","has_children":false,"type":"paragraph","paragraph":{"text":[{"type":"text","text":{"content":"A
-        paragraph","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"A
-        paragraph","href":null}]}},{"object":"block","id":"9051af10-83cb-4688-9210-3dae39432680","created_time":"2021-04-25T20:41:00.000Z","last_edited_time":"2021-04-25T20:41:00.000Z","has_children":false,"type":"paragraph","paragraph":{"text":[]}},{"object":"block","id":"f512bf64-55b0-432e-a850-82e73637d895","created_time":"2021-04-25T21:04:29.565Z","last_edited_time":"2021-04-25T21:04:29.565Z","has_children":false,"type":"heading_2","heading_2":{"text":[{"type":"text","text":{"content":"Another
-        Heading","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"Another
-        Heading","href":null}]}}],"next_cursor":null,"has_more":false}'
-  recorded_at: Sun, 25 Apr 2021 21:05:45 GMT
+  - request:
+      method: get
+      uri: https://api.notion.com/v1/blocks/723578f1-6e51-450c-8ee1-09158c19fd4c/children?block_id=723578f1-6e51-450c-8ee1-09158c19fd4c
+      body:
+        encoding: US-ASCII
+        string: ""
+      headers:
+        Accept:
+          - application/json; charset=utf-8
+        User-Agent:
+          - Notion Ruby Client/0.0.4
+        Authorization:
+          - Bearer <NOTION_API_TOKEN>
+        Accept-Encoding:
+          - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+    response:
+      status:
+        code: 200
+        message: OK
+      headers:
+        Date:
+          - Sun, 25 Apr 2021 21:05:45 GMT
+        Content-Type:
+          - application/json; charset=utf-8
+        Transfer-Encoding:
+          - chunked
+        Connection:
+          - keep-alive
+        Set-Cookie:
+          - __cfduid=d96e3d721ac572f706ca68070606fa2391619384744; expires=Tue, 25-May-21
+            21:05:44 GMT; path=/; domain=.notion.com; HttpOnly; SameSite=Lax
+          - notion_browser_id=612a2641-5d00-4c18-85b2-269d399f4e4b; Domain=www.notion.so;
+            Path=/; Expires=Wed, 01 Jan 2053 22:52:25 GMT; Secure
+        X-Dns-Prefetch-Control:
+          - "off"
+        X-Frame-Options:
+          - SAMEORIGIN
+        Strict-Transport-Security:
+          - max-age=5184000; includeSubDomains
+        X-Download-Options:
+          - noopen
+        X-Content-Type-Options:
+          - nosniff
+        X-Xss-Protection:
+          - 1; mode=block
+        Referrer-Policy:
+          - same-origin
+        Content-Security-Policy:
+          - "script-src 'self' 'unsafe-inline' 'unsafe-eval' https://gist.github.com
+            https://apis.google.com https://api.amplitude.com https://widget.intercom.io
+            https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
+            https://analytics.pgncs.notion.so https://checkout.stripe.com https://js.stripe.com/v3
+            https://embed.typeform.com https://admin.typeform.com https://platform.twitter.com
+            https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
+            connect-src 'self' https://msgstore.www.notion.so wss://msgstore.www.notion.so
+            ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
+            https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
+            https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
+            https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
+            https://api.segment.io https://api.pgncs.notion.so https://checkout.stripe.com
+            https://js.stripe.com/v3 https://cdn.contentful.com https://preview.contentful.com
+            https://images.ctfassets.net https://api.unsplash.com https://boards-api.greenhouse.io;
+            font-src 'self' data: https://cdnjs.cloudflare.com https://js.intercomcdn.com;
+            img-src 'self' data: blob: https: https://platform.twitter.com https://syndication.twitter.com
+            https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
+            'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://github.githubassets.com
+            https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
+            media-src https: http:"
+        X-Content-Security-Policy:
+          - "script-src 'self' 'unsafe-inline' 'unsafe-eval' https://gist.github.com
+            https://apis.google.com https://api.amplitude.com https://widget.intercom.io
+            https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
+            https://analytics.pgncs.notion.so https://checkout.stripe.com https://js.stripe.com/v3
+            https://embed.typeform.com https://admin.typeform.com https://platform.twitter.com
+            https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
+            connect-src 'self' https://msgstore.www.notion.so wss://msgstore.www.notion.so
+            ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
+            https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
+            https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
+            https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
+            https://api.segment.io https://api.pgncs.notion.so https://checkout.stripe.com
+            https://js.stripe.com/v3 https://cdn.contentful.com https://preview.contentful.com
+            https://images.ctfassets.net https://api.unsplash.com https://boards-api.greenhouse.io;
+            font-src 'self' data: https://cdnjs.cloudflare.com https://js.intercomcdn.com;
+            img-src 'self' data: blob: https: https://platform.twitter.com https://syndication.twitter.com
+            https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
+            'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://github.githubassets.com
+            https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
+            media-src https: http:"
+        X-Webkit-Csp:
+          - "script-src 'self' 'unsafe-inline' 'unsafe-eval' https://gist.github.com
+            https://apis.google.com https://api.amplitude.com https://widget.intercom.io
+            https://js.intercomcdn.com https://logs-01.loggly.com https://cdn.segment.com
+            https://analytics.pgncs.notion.so https://checkout.stripe.com https://js.stripe.com/v3
+            https://embed.typeform.com https://admin.typeform.com https://platform.twitter.com
+            https://cdn.syndication.twimg.com https://www.googletagmanager.com https://x.clearbitjs.com;
+            connect-src 'self' https://msgstore.www.notion.so wss://msgstore.www.notion.so
+            ws://localhost:* https://notion-emojis.s3-us-west-2.amazonaws.com https://s3-us-west-2.amazonaws.com
+            https://s3.us-west-2.amazonaws.com https://notion-production-snapshots-2.s3.us-west-2.amazonaws.com
+            https: http: https://api.amplitude.com https://api.embed.ly https://js.intercomcdn.com
+            https://api-iam.intercom.io wss://nexus-websocket-a.intercom.io https://logs-01.loggly.com
+            https://api.segment.io https://api.pgncs.notion.so https://checkout.stripe.com
+            https://js.stripe.com/v3 https://cdn.contentful.com https://preview.contentful.com
+            https://images.ctfassets.net https://api.unsplash.com https://boards-api.greenhouse.io;
+            font-src 'self' data: https://cdnjs.cloudflare.com https://js.intercomcdn.com;
+            img-src 'self' data: blob: https: https://platform.twitter.com https://syndication.twitter.com
+            https://pbs.twimg.com https://ton.twimg.com www.googletagmanager.com; style-src
+            'self' 'unsafe-inline' https://cdnjs.cloudflare.com https://github.githubassets.com
+            https://platform.twitter.com https://ton.twimg.com; frame-src https: http:;
+            media-src https: http:"
+        Etag:
+          - W/"621-oTt6TNWfBPJwQLysHa2sgVrXxyc"
+        Vary:
+          - Accept-Encoding
+        Cf-Cache-Status:
+          - DYNAMIC
+        Cf-Request-Id:
+          - "09ac7352730000edf3513be000000001"
+        Expect-Ct:
+          - max-age=604800, report-uri="https://report-uri.cloudflare.com/cdn-cgi/beacon/expect-ct"
+        Server:
+          - cloudflare
+        Cf-Ray:
+          - 645a87fd8f1aedf3-CDG
+      body:
+        encoding: UTF-8
+        string:
+          '{"object":"list","results":[{"object":"block","id":"786f3663-78aa-4852-afe7-0ef7da78dedc","created_time":"2021-04-25T20:40:00.000Z","last_edited_time":"2021-04-25T20:40:00.000Z","has_children":false,"type":"heading_1","heading_1":{"text":[{"type":"text","text":{"content":"A
+          Header","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"A
+          Header","href":null}]}},{"object":"block","id":"e450fda8-0159-405f-ab67-f9de28bb4e49","created_time":"2021-04-25T20:41:00.000Z","last_edited_time":"2021-04-25T20:41:00.000Z","has_children":false,"type":"paragraph","paragraph":{"text":[{"type":"text","text":{"content":"A
+          paragraph","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"A
+          paragraph","href":null}]}},{"object":"block","id":"9051af10-83cb-4688-9210-3dae39432680","created_time":"2021-04-25T20:41:00.000Z","last_edited_time":"2021-04-25T20:41:00.000Z","has_children":false,"type":"paragraph","paragraph":{"text":[]}},{"object":"block","id":"f512bf64-55b0-432e-a850-82e73637d895","created_time":"2021-04-25T21:04:29.565Z","last_edited_time":"2021-04-25T21:04:29.565Z","has_children":false,"type":"heading_2","heading_2":{"text":[{"type":"text","text":{"content":"Another
+          Heading","link":null},"annotations":{"bold":false,"italic":false,"strikethrough":false,"underline":false,"code":false,"color":"default"},"plain_text":"Another
+          Heading","href":null}]}}],"next_cursor":null,"has_more":false}'
+    recorded_at: Sun, 25 Apr 2021 21:05:45 GMT
 recorded_with: VCR 6.0.0
